--- a/.ci/job_matrix_advanced.yaml
+++ b/.ci/job_matrix_advanced.yaml
@@ -7,6 +7,13 @@ registry_auth: swx-storage
 
 kubernetes:
   cloud: swx-k8s
+  arch_table:
+    x86_64:
+      nodeSelector: 'kubernetes.io/arch=amd64'
+      jnlpImage: 'jenkins/inbound-agent:latest'
+    aarch64:
+      nodeSelector: 'kubernetes.io/arch=arm64'
+      jnlpImage: 'harbor.mellanox.com/swx-storage/jenkins-arm-agent-jnlp:latest'
 
 volumes:
   - {mountPath: /hpc/local, hostPath: /hpc/local}
